updates after feedback

--- a/about.html
+++ b/about.html
@@ -78,12 +78,25 @@
                         </button>
                         <div class="dropdown-menu absolute top-full left-0 mt-2 w-48 bg-white rounded-xl shadow-xl opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-300 border border-gray-100">
                             <a href="about.html#hero" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors first:rounded-t-xl">About Us</a>
-                            <a href="about.html#faq" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors">FAQ</a>
-                            
+                            <a href="about.html#faq" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors last:rounded-b-xl">FAQ</a>
                         </div>
                     </div>
 
-                    <a href="#" class="text-gray-600 hover:text-iatp-primary transition-colors font-medium">Events</a>
+                    <!-- Events Dropdown -->
+                    <div class="relative group">
+                        <button class="text-gray-600 hover:text-iatp-primary transition-colors font-medium flex items-center space-x-1">
+                            <span>Events</span>
+                            <span class="iconify text-xs transition-transform group-hover:rotate-180" data-icon="ant-design:down-outlined"></span>
+                        </button>
+                        <div class="dropdown-menu absolute top-full left-0 mt-2 w-56 bg-white rounded-xl shadow-xl opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-300 border border-gray-100">
+                            <a href="#" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors first:rounded-t-xl">Upcoming Events</a>
+                            <a href="#" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors">Practical Information</a>
+                            <a href="#" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors">Location Information</a>
+                            <a href="#" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors">Hotel Info & Booking</a>
+                            <a href="#" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors">Conference Registration</a>
+                            <a href="#" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors last:rounded-b-xl">Past Events</a>
+                        </div>
+                    </div>
 
                     <!-- Members Dropdown -->
                     <div class="relative group">
@@ -91,16 +104,16 @@
                             <span>Members</span>
                             <span class="iconify text-xs transition-transform group-hover:rotate-180" data-icon="ant-design:down-outlined"></span>
                         </button>
-                        <div class="dropdown-menu absolute top-full left-0 mt-2 w-56 bg-white rounded-xl shadow-xl opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-300 border border-gray-100">
-                            <a href="#" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors first:rounded-t-xl">Why Join IATP</a>
+                        <div class="dropdown-menu absolute top-full left-0 mt-2 w-64 bg-white rounded-xl shadow-xl opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-300 border border-gray-100">
+                            <a href="#" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors first:rounded-t-xl">Why join IATP</a>
                             <a href="#" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors">Airline Members</a>
-                            <a href="#" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors">Become a Member</a>
-                            <a href="#" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors last:rounded-b-xl">Associate Members</a>
-                            <a href="#" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors last:rounded-b-xl">Become an Associate Members</a>
-
-                            <a href="pionairs.html" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors last:rounded-b-xl">PIONAIRS</a>
+                            <a href="#" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors">Become an Airline Member</a>
+                            <a href="#" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors">Associate Members</a>
+                            <a href="#" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors last:rounded-b-xl">Become an Associate Member</a>
                         </div>
                     </div>
+
+                    <a href="pionairs.html" class="text-gray-600 hover:text-iatp-primary transition-colors font-medium">Pionairs</a>
 
                     <!-- News Dropdown -->
                     <div class="relative group">
@@ -109,14 +122,15 @@
                             <span class="iconify text-xs transition-transform group-hover:rotate-180" data-icon="ant-design:down-outlined"></span>
                         </button>
                         <div class="dropdown-menu absolute top-full left-0 mt-2 w-48 bg-white rounded-xl shadow-xl opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-300 border border-gray-100">
-                            <a href="#" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors rounded-xl">Press</a>
+                            <a href="#" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors first:rounded-t-xl">Communications</a>
+                            <a href="#" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors last:rounded-b-xl">Press</a>
                         </div>
                     </div>
 
                     <a href="#" class="text-gray-600 hover:text-iatp-primary transition-colors font-medium">Contact</a>
 
                     <button class="magnetic-btn px-8 py-3 bg-gradient-to-r from-iatp-primary to-iatp-secondary text-white rounded-full font-semibold shadow-lg shadow-iatp-primary/30 hover:shadow-xl hover:shadow-iatp-primary/40 transition-all relative z-10">
-                        Member Portal
+                        Member Login
                     </button>
                 </div>
 
@@ -151,15 +165,27 @@
                         <div class="mobile-dropdown-content hidden mt-2 ml-4 pl-8 space-y-1 border-l-2 border-white/20">
                             <a href="about.html#hero" class="block text-white/80 text-base py-2 px-4 hover:text-white hover:bg-white/10 rounded-lg transition-all mobile-menu-link">About Us</a>
                             <a href="about.html#faq" class="block text-white/80 text-base py-2 px-4 hover:text-white hover:bg-white/10 rounded-lg transition-all mobile-menu-link">FAQ</a>
-                            
                         </div>
                     </div>
 
-                    <!-- Events Link -->
-                    <a href="#" class="flex items-center space-x-3 px-4 py-3 text-white text-lg font-semibold rounded-xl hover:bg-white/10 transition-all mobile-menu-link">
-                        <span class="iconify text-xl" data-icon="ant-design:calendar-outlined"></span>
-                        <span>Events</span>
-                    </a>
+                    <!-- Events Mobile Dropdown -->
+                    <div class="mobile-dropdown">
+                        <button class="flex items-center justify-between w-full px-4 py-3 text-white text-lg font-semibold rounded-xl hover:bg-white/10 transition-all mobile-dropdown-btn">
+                            <span class="flex items-center space-x-3">
+                                <span class="iconify text-xl" data-icon="ant-design:calendar-outlined"></span>
+                                <span>Events</span>
+                            </span>
+                            <span class="iconify text-base transition-transform" data-icon="ant-design:down-outlined"></span>
+                        </button>
+                        <div class="mobile-dropdown-content hidden mt-2 ml-4 pl-8 space-y-1 border-l-2 border-white/20">
+                            <a href="#" class="block text-white/80 text-base py-2 px-4 hover:text-white hover:bg-white/10 rounded-lg transition-all mobile-menu-link">Upcoming Events</a>
+                            <a href="#" class="block text-white/80 text-base py-2 px-4 hover:text-white hover:bg-white/10 rounded-lg transition-all mobile-menu-link">Practical Information</a>
+                            <a href="#" class="block text-white/80 text-base py-2 px-4 hover:text-white hover:bg-white/10 rounded-lg transition-all mobile-menu-link">Location Information</a>
+                            <a href="#" class="block text-white/80 text-base py-2 px-4 hover:text-white hover:bg-white/10 rounded-lg transition-all mobile-menu-link">Hotel Info & Booking</a>
+                            <a href="#" class="block text-white/80 text-base py-2 px-4 hover:text-white hover:bg-white/10 rounded-lg transition-all mobile-menu-link">Conference Registration</a>
+                            <a href="#" class="block text-white/80 text-base py-2 px-4 hover:text-white hover:bg-white/10 rounded-lg transition-all mobile-menu-link">Past Events</a>
+                        </div>
+                    </div>
 
                     <!-- Members Mobile Dropdown -->
                     <div class="mobile-dropdown">
@@ -171,14 +197,19 @@
                             <span class="iconify text-base transition-transform" data-icon="ant-design:down-outlined"></span>
                         </button>
                         <div class="mobile-dropdown-content hidden mt-2 ml-4 pl-8 space-y-1 border-l-2 border-white/20">
-                            <a href="#" class="block text-white/80 text-base py-2 px-4 hover:text-white hover:bg-white/10 rounded-lg transition-all mobile-menu-link">Why Join IATP</a>
+                            <a href="#" class="block text-white/80 text-base py-2 px-4 hover:text-white hover:bg-white/10 rounded-lg transition-all mobile-menu-link">Why join IATP</a>
                             <a href="#" class="block text-white/80 text-base py-2 px-4 hover:text-white hover:bg-white/10 rounded-lg transition-all mobile-menu-link">Airline Members</a>
-                            <a href="#" class="block text-white/80 text-base py-2 px-4 hover:text-white hover:bg-white/10 rounded-lg transition-all mobile-menu-link">Become a Member</a>
+                            <a href="#" class="block text-white/80 text-base py-2 px-4 hover:text-white hover:bg-white/10 rounded-lg transition-all mobile-menu-link">Become an Airline Member</a>
                             <a href="#" class="block text-white/80 text-base py-2 px-4 hover:text-white hover:bg-white/10 rounded-lg transition-all mobile-menu-link">Associate Members</a>
-                            <a href="#" class="block text-white/80 text-base py-2 px-4 hover:text-white hover:bg-white/10 rounded-lg transition-all mobile-menu-link">Become an Associate Members</a>
-                            <a href="pionairs.html" class="block text-white/80 text-base py-2 px-4 hover:text-white hover:bg-white/10 rounded-lg transition-all mobile-menu-link">PIONAIRS</a>
+                            <a href="#" class="block text-white/80 text-base py-2 px-4 hover:text-white hover:bg-white/10 rounded-lg transition-all mobile-menu-link">Become an Associate Member</a>
                         </div>
                     </div>
+
+                    <!-- Pionairs Link -->
+                    <a href="pionairs.html" class="flex items-center space-x-3 px-4 py-3 text-white text-lg font-semibold rounded-xl hover:bg-white/10 transition-all mobile-menu-link">
+                        <span class="iconify text-xl" data-icon="ant-design:compass-outlined"></span>
+                        <span>Pionairs</span>
+                    </a>
 
                     <!-- News Mobile Dropdown -->
                     <div class="mobile-dropdown">
@@ -190,6 +221,7 @@
                             <span class="iconify text-base transition-transform" data-icon="ant-design:down-outlined"></span>
                         </button>
                         <div class="mobile-dropdown-content hidden mt-2 ml-4 pl-8 space-y-1 border-l-2 border-white/20">
+                            <a href="#" class="block text-white/80 text-base py-2 px-4 hover:text-white hover:bg-white/10 rounded-lg transition-all mobile-menu-link">Communications</a>
                             <a href="#" class="block text-white/80 text-base py-2 px-4 hover:text-white hover:bg-white/10 rounded-lg transition-all mobile-menu-link">Press</a>
                         </div>
                     </div>
@@ -205,7 +237,7 @@
                 <div class="px-6 py-6  bg-iatp-primary ">
                     <button class="w-full px-8 py-4 bg-white text-iatp-primary rounded-full font-bold shadow-xl text-lg hover:shadow-2xl hover:scale-105 transition-all flex items-center justify-center space-x-2">
                         <span class="iconify text-xl" data-icon="ant-design:user-outlined"></span>
-                        <span>Member Portal</span>
+                        <span>Member Login</span>
                     </button>
                 </div>
             </div>
@@ -378,8 +410,8 @@
 
                         <div class="grid md:grid-cols-2 gap-6 mb-12">
                             <div class="bg-white rounded-2xl p-8 shadow-xl border border-gray-100 hover:shadow-2xl transition-all group">
-                                <div class="w-20 h-20 bg-gradient-to-br from-iatp-primary to-iatp-secondary rounded-2xl flex items-center justify-center mb-6 mx-auto group-hover:scale-110 transition-transform">
-                                    <span class="iconify text-white text-3xl" data-icon="ant-design:user-outlined"></span>
+                                <div class="w-32 h-32 rounded-full overflow-hidden mb-6 mx-auto border-4 border-blue-100 group-hover:scale-110 transition-transform">
+                                    <img src="https://ui-avatars.com/api/?name=Essam+Hanafy&size=128&background=1942bd&color=fff&bold=true" alt="Essam Hanafy" class="w-full h-full object-cover">
                                 </div>
                                 <h4 class="text-2xl font-bold text-gray-900 mb-2 text-center">Essam Hanafy</h4>
                                 <div class="text-center mb-3">
@@ -393,8 +425,8 @@
                             </div>
 
                             <div class="bg-white rounded-2xl p-8 shadow-xl border border-gray-100 hover:shadow-2xl transition-all group">
-                                <div class="w-20 h-20 bg-gradient-to-br from-iatp-primary to-iatp-secondary rounded-2xl flex items-center justify-center mb-6 mx-auto group-hover:scale-110 transition-transform">
-                                    <span class="iconify text-white text-3xl" data-icon="ant-design:user-outlined"></span>
+                                <div class="w-32 h-32 rounded-full overflow-hidden mb-6 mx-auto border-4 border-blue-100 group-hover:scale-110 transition-transform">
+                                    <img src="https://ui-avatars.com/api/?name=Mike+Shaw&size=128&background=1942bd&color=fff&bold=true" alt="Mike Shaw" class="w-full h-full object-cover">
                                 </div>
                                 <h4 class="text-2xl font-bold text-gray-900 mb-2 text-center">Mike Shaw</h4>
                                 <div class="text-center mb-3">
@@ -408,8 +440,8 @@
                             </div>
 
                             <div class="bg-white rounded-2xl p-8 shadow-xl border border-gray-100 hover:shadow-2xl transition-all group">
-                                <div class="w-20 h-20 bg-gradient-to-br from-iatp-primary to-iatp-secondary rounded-2xl flex items-center justify-center mb-6 mx-auto group-hover:scale-110 transition-transform">
-                                    <span class="iconify text-white text-3xl" data-icon="ant-design:user-outlined"></span>
+                                <div class="w-32 h-32 rounded-full overflow-hidden mb-6 mx-auto border-4 border-blue-100 group-hover:scale-110 transition-transform">
+                                    <img src="https://ui-avatars.com/api/?name=Koray+Kudretoglu&size=128&background=1942bd&color=fff&bold=true" alt="Koray Kudretoglu" class="w-full h-full object-cover">
                                 </div>
                                 <h4 class="text-2xl font-bold text-gray-900 mb-2 text-center">Koray Kudretoglu</h4>
                                 <div class="text-center mb-3">
@@ -423,8 +455,8 @@
                             </div>
 
                             <div class="bg-white rounded-2xl p-8 shadow-xl border border-gray-100 hover:shadow-2xl transition-all group">
-                                <div class="w-20 h-20 bg-gradient-to-br from-iatp-primary to-iatp-secondary rounded-2xl flex items-center justify-center mb-6 mx-auto group-hover:scale-110 transition-transform">
-                                    <span class="iconify text-white text-3xl" data-icon="ant-design:user-outlined"></span>
+                                <div class="w-32 h-32 rounded-full overflow-hidden mb-6 mx-auto border-4 border-blue-100 group-hover:scale-110 transition-transform">
+                                    <img src="https://ui-avatars.com/api/?name=Carlos+Mendes&size=128&background=1942bd&color=fff&bold=true" alt="Carlos Mendes" class="w-full h-full object-cover">
                                 </div>
                                 <h4 class="text-2xl font-bold text-gray-900 mb-2 text-center">Carlos Mendes</h4>
                                 <div class="text-center mb-3">
@@ -442,8 +474,8 @@
 
                         <div class="max-w-md mx-auto">
                             <div class="bg-white rounded-2xl p-8 shadow-xl border-2 border-iatp-primary hover:shadow-2xl transition-all group">
-                                <div class="w-20 h-20 bg-gradient-to-br from-iatp-primary to-iatp-secondary rounded-2xl flex items-center justify-center mb-6 mx-auto group-hover:scale-110 transition-transform">
-                                    <span class="iconify text-white text-3xl" data-icon="ant-design:user-outlined"></span>
+                                <div class="w-32 h-32 rounded-full overflow-hidden mb-6 mx-auto border-4 border-blue-100 group-hover:scale-110 transition-transform">
+                                    <img src="https://ui-avatars.com/api/?name=Giorgio+Pietra&size=128&background=1942bd&color=fff&bold=true" alt="Giorgio Pietra" class="w-full h-full object-cover">
                                 </div>
                                 <h4 class="text-2xl font-bold text-gray-900 mb-2 text-center">Giorgio Pietra</h4>
                                 <div class="text-center mb-3">
