updates on content

--- a/associate-member.html
+++ b/associate-member.html
@@ -61,7 +61,7 @@
 </head>
 <body class="bg-white text-gray-900">
 
-      <!-- Navigation -->
+        <!-- Navigation -->
     <nav class="fixed w-full z-50 bg-white/95 backdrop-blur-xl shadow-lg transition-all duration-500" id="navbar">
         <div class="max-w-7xl mx-auto px-6 py-6">
             <div class="flex items-center justify-between">
@@ -117,7 +117,7 @@
 
                     <!-- News Dropdown -->
                     <div class="relative group">
-                        <button class="text-iatp-primary hover:text-iatp-primary transition-colors font-medium flex items-center space-x-1">
+                        <button class="text-gray-600 hover:text-iatp-primary transition-colors font-medium flex items-center space-x-1">
                             <span>News</span>
                             <span class="iconify text-xs transition-transform group-hover:rotate-180" data-icon="ant-design:down-outlined"></span>
                         </button>
@@ -243,6 +243,7 @@
             </div>
         </div>
     </nav>
+
 
     <!-- Hero Section -->
     <section id="hero" class="relative pt-32 pb-24 bg-gradient-to-br from-iatp-primary to-iatp-secondary overflow-hidden">
