--- a/why-join-IATP.html
+++ b/why-join-IATP.html
@@ -117,7 +117,7 @@
 
                     <!-- News Dropdown -->
                     <div class="relative group">
-                        <button class="text-iatp-primary hover:text-iatp-primary transition-colors font-medium flex items-center space-x-1">
+                        <button class="text-gray-600 hover:text-iatp-primary transition-colors font-medium flex items-center space-x-1">
                             <span>News</span>
                             <span class="iconify text-xs transition-transform group-hover:rotate-180" data-icon="ant-design:down-outlined"></span>
                         </button>
@@ -284,7 +284,7 @@
 
     <!-- Benefits Section -->
     <section class="py-20 bg-white">
-        <div class="max-w-7xl mx-auto px-6">
+        <div id="parts-pooling" class="max-w-7xl mx-auto px-6">
             <!-- Parts Pooling -->
             <div class="mb-20 reveal-up">
                 <div class="bg-gradient-to-br from-blue-50 to-cyan-50 rounded-3xl p-12 border border-blue-100">
@@ -459,14 +459,14 @@
                 </div>
             </div>
 
-            <!-- Live Maintenance -->
-            <div class="mb-20 reveal-up">
+            <!-- Line Maintenance -->
+            <div id="line-maintenance" class="mb-20 reveal-up">
                 <div class="bg-gradient-to-br from-blue-50 to-cyan-50 rounded-3xl p-12 border border-blue-100">
                     <div class="flex items-center mb-8">
                         <div class="w-20 h-20 bg-gradient-to-br from-iatp-primary to-iatp-secondary rounded-2xl flex items-center justify-center mr-6">
                             <span class="iconify text-white text-3xl" data-icon="ant-design:tool-outlined"></span>
                         </div>
-                        <h2 class="text-4xl md:text-5xl font-black text-gray-900">Live Maintenance</h2>
+                        <h2 class="text-4xl md:text-5xl font-black text-gray-900">Line Maintenance</h2>
                     </div>
 
                     <div class="grid md:grid-cols-2 gap-8">
@@ -577,7 +577,7 @@
             </div>
 
             <!-- Aircraft Recovery -->
-            <div class="mb-20 reveal-up">
+            <div id="aircraft-recovery" class="mb-20 reveal-up">
                 <div class="bg-gradient-to-br from-blue-50 to-cyan-50 rounded-3xl p-12 border border-blue-100">
                     <div class="flex items-center mb-8">
                         <div class="w-20 h-20 bg-gradient-to-br from-iatp-primary to-iatp-secondary rounded-2xl flex items-center justify-center mr-6">
@@ -688,7 +688,7 @@
             </div>
 
             <!-- Equipment Pooling -->
-            <div class="mb-20 reveal-up">
+            <div id="equipment-pooling" class="mb-20 reveal-up">
                 <div class="bg-gradient-to-br from-blue-50 to-cyan-50 rounded-3xl p-12 border border-blue-100">
                     <div class="flex items-center mb-8">
                         <div class="w-20 h-20 bg-gradient-to-br from-iatp-primary to-iatp-secondary rounded-2xl flex items-center justify-center mr-6">
