--- a/news.html
+++ b/news.html
@@ -89,12 +89,12 @@
                             <span class="iconify text-xs transition-transform group-hover:rotate-180" data-icon="ant-design:down-outlined"></span>
                         </button>
                         <div class="dropdown-menu absolute top-full left-0 mt-2 w-56 bg-white rounded-xl shadow-xl opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-300 border border-gray-100">
-                            <a href="#" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors first:rounded-t-xl">Upcoming Events</a>
-                            <a href="#" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors">Practical Information</a>
-                            <a href="#" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors">Location Information</a>
-                            <a href="#" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors">Hotel Info & Booking</a>
-                            <a href="#" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors">Conference Registration</a>
-                            <a href="#" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors last:rounded-b-xl">Past Events</a>
+                            <a href="events.html#upcoming" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors first:rounded-t-xl">Upcoming Events</a>
+                            <a href="events.html#practical" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors">Practical Information</a>
+                            <a href="events.html#location" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors">Location Information</a>
+                            <a href="events.html#hotel" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors">Hotel Info & Booking</a>
+                            <a href="events.html#registration" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors">Conference Registration</a>
+                            <a href="events.html#past-events" class="block px-6 py-3 text-gray-600 hover:text-iatp-primary hover:bg-blue-50 transition-colors last:rounded-b-xl">Past Events</a>
                         </div>
                     </div>
 
@@ -152,7 +152,7 @@
                 </div>
 
                 <!-- Navigation -->
-                <nav class="flex-1 px-4 py-6 space-y-2 bg-iatp-primary ">
+                <nav class="flex-1 px-4 py-6 space-y-2 bg-iatp-primary overflow-y-auto">
                     <!-- About Mobile Dropdown -->
                     <div class="mobile-dropdown">
                         <button class="flex items-center justify-between w-full px-4 py-3 text-white text-lg font-semibold rounded-xl hover:bg-white/10 transition-all mobile-dropdown-btn">
@@ -178,12 +178,12 @@
                             <span class="iconify text-base transition-transform" data-icon="ant-design:down-outlined"></span>
                         </button>
                         <div class="mobile-dropdown-content hidden mt-2 ml-4 pl-8 space-y-1 border-l-2 border-white/20">
-                            <a href="#" class="block text-white/80 text-base py-2 px-4 hover:text-white hover:bg-white/10 rounded-lg transition-all mobile-menu-link">Upcoming Events</a>
-                            <a href="#" class="block text-white/80 text-base py-2 px-4 hover:text-white hover:bg-white/10 rounded-lg transition-all mobile-menu-link">Practical Information</a>
-                            <a href="#" class="block text-white/80 text-base py-2 px-4 hover:text-white hover:bg-white/10 rounded-lg transition-all mobile-menu-link">Location Information</a>
-                            <a href="#" class="block text-white/80 text-base py-2 px-4 hover:text-white hover:bg-white/10 rounded-lg transition-all mobile-menu-link">Hotel Info & Booking</a>
-                            <a href="#" class="block text-white/80 text-base py-2 px-4 hover:text-white hover:bg-white/10 rounded-lg transition-all mobile-menu-link">Conference Registration</a>
-                            <a href="#" class="block text-white/80 text-base py-2 px-4 hover:text-white hover:bg-white/10 rounded-lg transition-all mobile-menu-link">Past Events</a>
+                            <a href="events.html#upcoming" class="block text-white/80 text-base py-2 px-4 hover:text-white hover:bg-white/10 rounded-lg transition-all mobile-menu-link">Upcoming Events</a>
+                            <a href="events.html#practical" class="block text-white/80 text-base py-2 px-4 hover:text-white hover:bg-white/10 rounded-lg transition-all mobile-menu-link">Practical Information</a>
+                            <a href="events.html#location" class="block text-white/80 text-base py-2 px-4 hover:text-white hover:bg-white/10 rounded-lg transition-all mobile-menu-link">Location Information</a>
+                            <a href="events.html#hotel" class="block text-white/80 text-base py-2 px-4 hover:text-white hover:bg-white/10 rounded-lg transition-all mobile-menu-link">Hotel Info & Booking</a>
+                            <a href="events.html#registration" class="block text-white/80 text-base py-2 px-4 hover:text-white hover:bg-white/10 rounded-lg transition-all mobile-menu-link">Conference Registration</a>
+                            <a href="events.html#past-events" class="block text-white/80 text-base py-2 px-4 hover:text-white hover:bg-white/10 rounded-lg transition-all mobile-menu-link">Past Events</a>
                         </div>
                     </div>
 
@@ -243,7 +243,6 @@
             </div>
         </div>
     </nav>
-
 
     <!-- Hero Section -->
     <section id="hero" class="relative pt-32 pb-24 bg-gradient-to-br from-iatp-primary to-iatp-secondary overflow-hidden">
@@ -307,7 +306,7 @@
                             </div>
                             <div>
                                 <div class="flex items-center space-x-3 mb-3">
-                                    <span class="text-sm font-bold text-iatp-primary bg-white px-4 py-1 rounded-full">Aprill 1st, 2025</span>
+                                    <span class="text-sm font-bold text-iatp-primary bg-white px-4 py-1 rounded-full">April 1st, 2025</span>
                                     <span class="text-sm text-gray-500">Panama City, Panama</span>
                                 </div>
                                 <h3 class="text-2xl md:text-3xl font-black text-gray-900 mb-4">3 Airlines and 1 Associate Member joined IATP</h3>
@@ -349,7 +348,7 @@
                             </div>
                             <div>
                                 <div class="flex items-center space-x-3 mb-3">
-                                    <span class="text-sm font-bold text-iatp-primary bg-white px-4 py-1 rounded-full">Aprill 1st, 2024</span>
+                                    <span class="text-sm font-bold text-iatp-primary bg-white px-4 py-1 rounded-full">April 1st, 2024</span>
                                     <span class="text-sm text-gray-500">Guangzhou, China</span>
                                 </div>
                                 <h3 class="text-2xl md:text-3xl font-black text-gray-900 mb-4">3 Airlines and 3 Associate Members joined IATP</h3>
